--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
-    "ai": "^3.1.12",
+    "@types/validator": "^13.12.1",
+    "ai": "^3.3.37",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -33,12 +34,15 @@
     "react-dom": "^18.3.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zod": "^3.22.3",
-    "zod-to-json-schema": "^3.21.4"
+    "validator": "^13.12.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
-    "prettier": "3.0.0"
+    "@types/jest": "^29.5.13",
+    "prettier": "3.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "packageManager": "yarn@3.5.1"
 }
