--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"app\""
+    "format": "prettier --write \"app\"",
+    "test": "jest"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.60",
     "@langchain/community": "^0.3.0",
     "@langchain/core": "^0.3.1",
     "@langchain/langgraph": "^0.2.3",
     "@langchain/openai": "^0.3.0",
     "@next/bundle-analyzer": "^13.4.19",
-    "@supabase/supabase-js": "^2.32.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
@@ -40,9 +42,23 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
     "prettier": "3.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
-  "packageManager": "yarn@3.5.1"
+  "packageManager": "yarn@3.5.1",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/app/$1"
+    },
+    "testMatch": ["**/*.test.ts"],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
+  }
 }
