Create READMEASSISTANT.md for interthread context consistency when working with AI tools in IDE. Unit tests for langchain integration.

--- a/package.json
+++ b/package.json
@@ -52,11 +52,20 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/app/$1"
     },
-    "testMatch": ["**/*.test.ts"],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     }
