--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.60",
+    "@audius/sdk": "^5.0.0",
     "@langchain/community": "^0.3.0",
     "@langchain/core": "^0.3.1",
     "@langchain/langgraph": "^0.2.3",
@@ -29,21 +30,31 @@
     "@types/validator": "^13.12.1",
     "ai": "^3.3.37",
     "autoprefixer": "10.4.14",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "effect": "^3.8.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "https-browserify": "^1.0.0",
     "langchain": "^0.3.2",
     "next": "^14.2.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "8.4.27",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^9.1.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "3.3.3",
     "validator": "^13.12.0",
+    "web3": "^4.13.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
+    "@tsconfig/strictest": "^2.0.5",
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
     "prettier": "3.0.0",
@@ -51,7 +62,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
-  "packageManager": "yarn@3.5.1",
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
@@ -72,5 +82,11 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
