--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "format": "prettier --write \"app\"",
     "test": "jest",
-    "test:integration": "jest --config jest.integration.config.js"
+    "test:integration": "jest --config jest.integration.config.js",
+    "ingest": "ts-node scripts/ingestAudiusData.ts"
   },
   "engines": {
     "node": ">=18"
@@ -18,11 +19,13 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.60",
     "@audius/sdk": "^5.0.0",
-    "@langchain/community": "^0.3.0",
+    "@langchain/community": "^0.3.1",
     "@langchain/core": "^0.3.1",
     "@langchain/langgraph": "^0.2.3",
     "@langchain/openai": "^0.3.0",
     "@next/bundle-analyzer": "^13.4.19",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
@@ -30,6 +33,7 @@
     "@types/validator": "^13.12.1",
     "ai": "^3.3.37",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.7",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
@@ -47,6 +51,7 @@
     "react-toastify": "^9.1.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "supabase": "^1.192.5",
     "tailwindcss": "3.3.3",
     "validator": "^13.12.0",
     "web3": "^4.13.0",
@@ -87,6 +92,8 @@
   "browser": {
     "fs": false,
     "os": false,
-    "path": false
+    "path": false,
+    "crypto": false,
+    "stream": false
   }
 }
