--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-next": "13.4.12",
     "https-browserify": "^1.0.0",
     "langchain": "^0.3.2",
+    "langsmith": "^0.1.60",
     "next": "^14.2.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
